--- a/Werkstuk versie 2.tex
+++ b/Werkstuk versie 2.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt,reqno]{article}
 \usepackage[dutch]{babel}
-\usepackage[margin=1.2in]{geometry}
+\usepackage[margin=1.3in]{geometry}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
@@ -15,7 +15,7 @@
 		Lotte Bruijnen, & 4297652 \\
 		Daan van Laar, & 5518741 \\
 		Suzanne Vincken, & 4273338
-	\end{tabular}\\
+	\end{tabular}\\\\
 	Onder begeleiding van: Carel Faber, UU
 }
 \date{04-01-2016}
@@ -43,29 +43,43 @@
 \begin{document}	
 	\begin{titlepage}
 		\maketitle
+		\thispagestyle{empty}
+		\begin{figure*}[h!]
+			\centering
+			\begin{tikzpicture}[xscale=5, yscale=3]
+			\coordinate (O) at (0,0);
+			\coordinate (A) at (1,0);
+			\coordinate (B) at (0,1);
+			\coordinate (M) at (0.38, 0.15);
+			\draw (O) -- node[auto,swap]{$\frac{411340519227716149383203}{21666555693714761309610}$} 
+			(A) -- node[auto,swap]{$\frac{224403517704336969924557513090674863160948472041}{8912332268928859588025535178967163570016480830}$}
+			(B) -- node[auto,swap]{$\frac{6803298487826435051217540}{411340519227716149383203}$} (O);
+			\draw (M) node[auto]{oppervlakte $=157$};
+			\end{tikzpicture}
+		\end{figure*}
 	\end{titlepage}
 
 	\allowdisplaybreaks
 	
 	\section{Inleiding}
-	We hebben onderzoek gedaan naar congruente getallen, een onderwerp uit getaltheorie, om onze kennis te verbreden. In dit werkstuk zullen we vertellen wat wij hebben gevonden.
+	We hebben onderzoek gedaan naar congruente getallen om onze kennis te verbreden. Het is een onderwerp uit de getaltheorie. In dit werkstuk zullen we vertellen wat we hebben gevonden.
 	
-	Als eerste gaan we kijken naar twee mogelijke definities voor congruente getallen. Er wordt hierbij ook verteld wat Pythagore\"ische drietallen zijn. Daarna gaan we kijken hoe we congruente getallen kunnen vinden. Tot slot kijken we naar een belangrijke propositie. We zullen afsluiten met een samenvatting.
-	
-	
-%	\section{Begrippen}
-%	\begin{tabular}{ p{4,6cm} p{10cm} }
-%		\textbf{Kwadraatvrij}: \cite{Beukers} & Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$. \\
-%		\textbf{Primitieve congruente getallen}: & Een kwadraatvrij congruent getal.
-%	\end{tabular}
+	Als eerste gaan we kijken naar Pythagore\"ische drietallen en wat zij te maken hebben met congruente getallen. Daarna volgen er twee definities. Een meetkundige definitie en een algebra\"ische definitie. Dit wordt opgevolgd door voorbeelden van getallen die wel of niet congruent zijn. Daarna zullen we gaan kijken hoe we eigenlijk alle congruente getallen kunnen vinden. Ten slotte bekijken we nog een belangrijke stelling omtrent congruente getallen. En als afsluiting zullen we een samenvatting geven van wat we allemaal hebben gevonden.
 	
 	
-	\section{Congruente getallen en Pythagore\"ische drietallen}	
+	%\beginsection{Daan}
+	\section{Pythagore\"ische drietallen en Congruente getallen}
+	%Wat is een Pythagoreisch drietal?
+	%Wat is een congruent getal?
+	%  - algebraische definitie + bewijs
+	%  - meetkundige definitie
+	%  - definitie primitieve congruente getallen: Een kwadraatvrij congruent getal
+	%Er schijnt een stelling te zijn die alle Pythagoreïsche drietallen classificeert. Als je die kan vinden, kan je het die even noemen.
 	Eerst zullen we kijken naar de definitie van congruente getallen. Er bestaan echter meerdere definities. We zullen er hier twee behandelen.\\
 	
 	Ten eerste kijken we naar de meetkundige definitie uit \cite{Oort}[p.3]:	
 	
-	\begin{definition}
+	\begin{definition}\label{def:meetkunde}
 		Een positief geheel getal $n$ heet een congruent getal als er een rechthoekige driehoek bestaat met lengtes van zijden in $\QQ_{>0}$ en met oppervlak gelijk aan $n\in\ZZ$. Noem de lengtes van de zijden $x,y,z\in\QQ$; met behulp van de stelling van Pythagoras zien we:
 		\begin{figure*}[h!]
 			\centering
@@ -88,7 +102,7 @@
 	\begin{definition}\label{def:algebra}
 		Een positief geheel getal $n$ heet een congruent getal als er bestaat een $\delta\in\QQ$ zodanig dat
 		\begin{align*}
-		\delta^2 - n, \delta^2, \delta^2 + n
+		\delta^2 - n,\quad \delta^2,\quad \delta^2 + n
 		\end{align*}
 		kwadraten zijn in $\QQ$.
 	\end{definition}	
@@ -115,11 +129,56 @@
 	{\color{red}Bewijs dat ggd(x,z) en ggd(y,z) ook 1 zijn. Nog veel meer bewijzen over ppd's.}
 	%Tweede definitie congruente getallen
 	
+	%Dat ding uit het boek, zie whatsapp
+	\begin{proposition}
+		\cite{Koblitz}[p.4, vertaald] Laat $n$ een vast kwaadraatvrij positief getal zijn. Laat $x,y,z,\delta \in\QQ$ met $x<y<z$. Er is een \'e\'en op \'e\'en relatie tussen rechthoekige driehoeken met zijden $x$ en $y$, schuine zijde $z$ en oppervlakte $n$, en getallen $\delta$ waarvoor geldt dat $\delta$, $\delta +n$ en $\delta -n$ de kwadraten zijn van een rationeel nummer. De correspondentie is:
+		\begin{align}
+		x,y,z &\rightarrow \delta = \left( \frac{z}{2} \right)^2 \\
+		\delta &\rightarrow x=\sqrt{\delta+n} - \sqrt{\delta-n},\quad y = \sqrt{\delta+n}+\sqrt{\delta-n},\quad z = 2\sqrt{\delta}.
+		\end{align}
+		In het bijzonder, $n$ is een congruent getal dan en slechts dan als er bestaat een $\delta$ zodat $\delta$, $\delta+n$ en $\delta-n$ kwadraten van rationele nummers zijn.
+	\end{proposition}
+	
+	
 	%\endsection{Daan}
 
 
 	\section{Voorbeelden}
-	Hieronder volgen drie voorbeelden van congruente getallen, volgens definitie 1. Het kleinste congruente getal is $5$. Dat is de driehoek met de volgende zijden: {\color{red}bewering beargumenteren?}
+	We zullen eerst aantonen dat $m=1$ en $m=2$ geen congruente getallen zijn. We nemen daarvoor de volgende rechthoekige driehoek:
+	\begin{figure*}[h!]
+		\centering
+		\begin{tikzpicture}[xscale=4, yscale=2]
+		\coordinate (O) at (0,0);
+		\coordinate (A) at (1,0);
+		\coordinate (B) at (0,1);
+		\coordinate (M) at (0.25, 0.25);
+		\draw (O) -- node[auto,swap]{$y$} 
+		(A) -- node[auto,swap]{$z$}
+		(B) -- node[auto,swap]{$x$} (O);
+		\draw (M) node[auto]{$m$};
+		\end{tikzpicture}
+	\end{figure*}\\
+	Als $m=1$ een congruent getal is, moet er volgens definitie (\ref{def:meetkunde}) gelden dat er $\frac{1}{2}xy=1$ en $x,y,z\in\QQ$. Hieruit kunnen we afleiden dat:
+	\begin{equation}
+	xy=2
+	\end{equation}
+	Waaruit volgt dat:
+	\begin{align}
+	\label{vgl:x} x=\frac{2}{y}\\
+	\label{vgl:y} y=\frac{2}{x}
+	\end{align}
+	We weten door de stelling van Pythagoras dat er moet gelden $x^2+y^2=z^2$. Als we de vergelijkingen (\ref{vgl:x}) en (\ref{vgl:y}) invullen, krijgen we:
+	\begin{align}
+	\left(\frac{2}{y}\right)^2 + \left(\frac{2}{x}\right)^2 &= z^2\\
+	\Rightarrow \sqrt{\frac{2^2}{y^2} + \frac{2^2}{x^2}} &= z\\
+	\Rightarrow \sqrt{\frac{4x^2 + 4y^2}{x^2y^2}} &= z\\
+	\Rightarrow \frac{\sqrt{4x^2 + 4y^2}}{xy} &= z
+	\end{align} 
+	
+		
+	%Geef een bewijs met n=1 of n=2
+	%Geef andere voorbeelden
+	Hieronder volgen drie voorbeelden van congruente getallen, volgens definitie \ref{def:meetkunde}. Het kleinste congruente getal is $5$. Dat is de driehoek met de volgende zijden: {\color{red}bewering beargumenteren?}
 	\begin{figure*}[h!]
 		\centering
 		\begin{tikzpicture}[xscale=4, yscale=2]
@@ -161,8 +220,8 @@
 		\draw (M) node[auto]{$n=157$};
 		\end{tikzpicture}
 	\end{figure*}
-	
-	
+
+
 	\section{Congruente getallen vinden}
 	Voor dit hoofdstuk hebben we gebruik gemaakt van \cite{Koblitz}[p.3-4].\\
 	We weten dat een congruent getal $n$ een geheel getal is als oppervlakte van een driehoek met rationale zijden. We willen nu graag weten welke getallen $m\in\NN$ voldoen aan de definitie van een congruent getal. Als we dat willen doen met de kennis van nu, moeten we voor elke $m$ gaan kijken of we een driehoek kunnen vinden met zijden in $\QQ$ zodat de oppervlakte van deze driehoek gelijk is aan $m$. Het is niet moeilijk om te bedenken dat dat een onmogelijke zaak is, zelfs als we de computer laten rekenen. Dus moeten we opzoek gaan naar een manier om het aantal mogelijke getallen $m\in\NN$ te verminderen. Om te kijken hoe we dat kunnen doen, kijken we eerst naar de volgende driehoek:
@@ -186,7 +245,7 @@
 	\end{figure}\\
 	Dit is een driehoek met zijn zijden in $\QQ$ en zijn oppervlakte in $\NN$. Dit betekent dus dat $r$ een congruent getal is.
 	
-	We bekijken nu de driehoek nadat we alle zijden vermigvuldigd hebben met een getal $s\in\NN$. Deze driehoek ziet er dan alsvolgt uit:
+	We bekijken nu dezelfde driehoek nadat we alle zijden vermigvuldigd hebben met een getal $s\in\NN$. Deze driehoek ziet er dan alsvolgt uit:
 	\begin{figure}[h!]
 		\centering
 		\begin{tikzpicture}[xscale=2, yscale=1]
@@ -205,34 +264,19 @@
 		\draw (N) node[auto]{$\frac{1}{2} sx \cdot sy = s^2 \cdot \frac{1}{2}xy = s^2r \in\NN$};
 		\end{tikzpicture}
 	\end{figure}\\
-	We zien dat $s^2r\in\NN$ ook een congruent getal is, want de zijden van de driehoek bevinden zich in $\QQ$. Als we nu willen zoeken naar congruente getallen, kunnen we dus ook kijken naar alle kwadraatvrije\footnote{Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$. \cite{Beukers}} getallen $m'\in\NN$. Want door het zojuist gegeven voorbeeld zien we dat we $r$ met een willekeurig kwadraat uit $\NN$ kunnen vermenigvuldigen zonder dat het zijn eigenschappen verliest, het is dan nog steeds een congruent getal.
+	We zien dat $s^2r\in\NN$ ook een congruent getal is, want de zijden van de driehoek bevinden zich in $\QQ$. Als we nu willen zoeken naar congruente getallen, kunnen we dus ook kijken naar alle kwadraatvrije\footnote{Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$. \cite{Beukers}} getallen $m'\in\NN$. Namelijk: door het zojuist gegeven voorbeeld zien we dat we $r$ met een willekeurig kwadraat uit $\NN$ kunnen vermenigvuldigen zonder dat het zijn eigenschappen verliest, het is dan nog steeds een congruent getal.
 
 	We hebben nu dus gezien dat we alleen nog maar hoeven te kijken naar kwaadraatvrije getallen. We nemen vanaf nu dus aan dat $n$ een kwaadraatvrij congruent getal is. Dat betekent dat we al een stuk sneller door $\NN$ kunnen gaan om te kijken welke getallen congruent zijn. Sterker nog: er betstaat een algoritme die voor elke $m'\in\NN$ checkt of er een Pythagore\"isch drietal bestaat zodat $m'$ de oppervlakte is van deze driehoek. Als $m'$ congruent is, zet het algoritme deze in een lijst. Helaas weten we niet of een getal dat niet in de lijst staat, ook daadwerkelijk geen congruent getal is. Het kan namelijk ook zo zijn dat het algoritme te lang moest zoeken naar een Pythagore\"isch drietal, waardoor hij het zoeken heeft afgebroken. Dit is dus nog steeds geen optimale manier om naar congruente getallen te zoeken. We zoeken dus eigenlijk nog steeds naar een formule die ons kan vertellen of een getal wel of niet congruent is. Daarvoor introduceren we eerst de stelling van Tunnell:
-	\begin{theorem}
+	\begin{theorem}\label{def:tunnell}
 		\cite{Koblitz}[p.212, vertaald] (Tunnell, 1983) Als $n$ een kwadraatvrij en oneven (respectievelijk even) positief geheel getal is en $n$ is de oppervlakte van een rechthoekige driehoek met rationale zijden, dan
 		\begin{align}
-		\#\{x,y,z\in\ZZ \mid n=2x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+8z^2\}\\
+		\label{vgl:oneven} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid n=2x^2+y^2+8z^2\}\\
 		\notag \text{(respectievelijk} \\
-		\#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+8z^2\})
+		\label{vgl:even} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+32z^2\} = \frac{1}{2} \#\{x,y,z\in\ZZ \mid \frac{n}{2}=4x^2+y^2+8z^2\})
 		\end{align}
 		Als het zwakke vermoeden van Birch-Swinnerton-Dyer waar is voor de elliptische krommen $E_n:y^2=x^3-n^2x$, dan, omgekeerd, impliceren deze gelijkheden dat $n$ een congruent getal is.
 	\end{theorem}
-	
-	\begin{proposition}
-		Laat $n$ een vast kwaadraatvrij positief getal zijn. Laat $x,y,z,\delta \in\QQ$ met $x<y<z$. Er is een \'e\'en op \'e\'en relatie tussen rechthoekige driehoeken met zijden $x$ en $y$, schuine zijde $z$ en oppervlakte $n$, en getallen $\delta$ waarvoor geldt dat $\delta$, $\delta +n$ en $\delta -n$ de kwadraten zijn van een rationeel nummer. De correspondentie is:
-		\begin{align}
-			x,y,z &\rightarrow \delta = \left( \frac{z}{2} \right)^2 \\
-			\delta &\rightarrow x=\sqrt{\delta+n} - \sqrt{\delta-n},\quad y = \sqrt{\delta+n}+\sqrt{\delta-n},\quad z = 2\sqrt{\delta}.
-		\end{align}
-		In het bijzonder, $n$ is een congruent getal dan en slechts dan als er bestaat een $\delta$ zodat $\delta$, $\delta+n$ en $\delta-n$ kwadraten van rationele nummers zijn.
-	\end{proposition}
-	
-	
-	
-	Definitie \ref{def:algebra}
-	
-	
-	We kunnen met de theorie van Tunnell precies controleren welke Pythagore\"ische drietallen bij een congruent getal horen. Hiervoor moeten we wel iets aannemen wat te maken heeft met elliptische krommen. Gebruik makend van de elliptische krommen, moet gelden dat een paar rationele getallen $(x,y)$ van een congruente driehoek met zijden $x,y,z$, moet voldoen aan de vergelijking: $y^2=x^3-n^2x$.
+	Deze stelling zegt dat als $n$ een kwadraatvrij en congruent getal is, dan voldoet deze $n$ aan de vergelijkingen (\ref{vgl:oneven}) en (\ref{vgl:even}). Om te checken of een kwadraatvrij getal $m'\in\NN$ congruent is, willen we weten dat de stelling ook de andere kant op werkt. Dit kunnen we alleen aannemen als we het vermoeden van Birch-Swinnerton-Dyer aannemen, een vermoeden over elliptische krommen. Dit is voor nu te ingewikkeld, dus dit zullen we niet verder behandelen. Wat we nu in elk geval hebben is een formule om te kijken of een kwadraatvrij getal $m'\in\NN$ congruent is of niet en dat is waar we naar zochten.
 	
 	
 	\section{Presentaties van congruente getallen}
@@ -264,6 +308,16 @@
 	We kunnen deze methode herhalen met $U'$, $V'$ en $E$, en zo weer een nieuwe presentatie vinden. Met die nieuwe presentatie kunnen we weer een nieuwe presentatie vinden, enzovoort. In feite kunnen we het dus oneindig vaak herhalen, waarbij we steeds een nieuwe presentatie vinden. Ergo: ieder congruent getal bevat oneindig veel presentaties.
 	
 	
+	\section{Praktische toepassingen}
+	
+	
+	\section{Samenvatting}
+	
+	
+	\bibliographystyle{plain}
+	\bibliography{bib}
+\end{document}
+
 %	\section{Stellingen}
 %	
 %	\begin{theorem}
@@ -284,12 +338,3 @@
 %		\end{align*}
 %		In particular, $n$ is a congruent number if and only if there exists $x$ such that $x$, $x+n$, and $x-n$ are squares of rational numbers.
 %	\end{proposition}
-	
-	\section{Praktische toepassingen}
-	
-	\section{Samenvatting}
-	
-	
-	\bibliographystyle{plain}
-	\bibliography{bib}
-\end{document}
