--- a/Werkstuk versie 2.tex
+++ b/Werkstuk versie 2.tex
@@ -68,7 +68,7 @@
 	\section{Inleiding}
 	We hebben onderzoek gedaan naar congruente getallen om onze kennis te verbreden. Het is een onderwerp uit de getaltheorie. In dit werkstuk zullen we vertellen wat we hebben gevonden.
 	
-	Als eerste gaan we kijken naar Pythagore\"ische drietallen en wat zij te maken hebben met congruente getallen. Daarna volgen er twee definities. Een meetkundige definitie en een algebra\"ische definitie. Dit wordt opgevolgd door voorbeelden van getallen die wel of niet congruent zijn. Daarna zullen we gaan kijken hoe we eigenlijk alle congruente getallen kunnen vinden. Ten slotte bekijken we nog een belangrijke stelling omtrent congruente getallen. En als afsluiting zullen we een samenvatting geven van wat we allemaal hebben gevonden.
+	In hoofdstuk 2 zullen we Pythagore\"ische drietallen en congruente getallen behandelen. We zullen definities geven en we leggen uit wat deze twee onderwerpen met elkaar te maken hebben. Daarna, in hoofdstuk 3, zullen we een aantal voorbeelden geven van congruente getallen. Hoofdstuk 4 zal gaan over het vinden van congruente getallen. Hoe vinden we alle getallen die congruent zijn? In het laatste hoofdstuk, hoofdstuk 5, zullen we kijken naar presentaties van congruente getallen. Dit heeft te maken met Pythagore\"ische drietallen. Als afsluiting zullen we een samenvatting geven van alles wat we hebben behandeld.
 	
 	
 	%\beginsection{Daan}
