--- a/Werkstuk versie 2.tex
+++ b/Werkstuk versie 2.tex
@@ -72,7 +72,7 @@
 	
 	
 	%\beginsection{Daan}
-	\section{Pythagore\"ische drietallen en Congruente getallen}
+	\section{Pythagore\"ische drietallen en Congruente getallen}\label{sec:def}
 	%Wat is een Pythagoreisch drietal?
 	%Wat is een congruent getal?
 	%  - algebraische definitie + bewijs
@@ -235,7 +235,7 @@
 		\draw (X1) -- (X2) -- (X3);
 		\end{tikzpicture}
 	\end{figure}\\
-	Dit is een driehoek met zijn zijden in $\QQ$ en zijn oppervlakte in $\NN$. Dit betekent dus dat $r$ een congruent getal is.
+	Dit is een driehoek met zijn zijden in $\QQ$ en zijn oppervlakte in $\NN$. Dit betekent dus dat $r$ een congruent getal is.\\
 	
 	We bekijken nu dezelfde driehoek nadat we alle zijden vermigvuldigd hebben met een getal $s\in\NN$. Deze driehoek ziet er dan alsvolgt uit:
 	\begin{figure}[h!]
@@ -260,7 +260,7 @@
 		\draw (X1) -- (X2) -- (X3);
 		\end{tikzpicture}
 	\end{figure}\\
-	We zien dat $s^2r\in\NN$ ook een congruent getal is, want de zijden van de driehoek bevinden zich in $\QQ$. Als we nu willen zoeken naar congruente getallen, kunnen we dus ook kijken naar alle kwadraatvrije\footnote{Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$. \cite{Beukers}} getallen $m'\in\NN$. Namelijk: door het zojuist gegeven voorbeeld zien we dat we $r$ met een willekeurig kwadraat uit $\NN$ kunnen vermenigvuldigen zonder dat het zijn eigenschappen verliest, het is dan nog steeds een congruent getal.
+	We zien dat $s^2r\in\NN$ ook een congruent getal is, want de zijden van de driehoek bevinden zich in $\QQ$. Als we nu willen zoeken naar congruente getallen, kunnen we dus ook kijken naar alle kwadraatvrije\footnote{Een kwadraatvrij getal is een getal dat niet deelbaar is door een kwadraat groter dan $1$. Waarbij een kwadraat een getal $k\in\NN$ zodat $\sqrt{k}\in\NN$. \cite{Beukers}} getallen $m'\in\NN$. Namelijk: door het zojuist gegeven voorbeeld zien we dat we $r$ met een willekeurig kwadraat uit $\NN$ kunnen vermenigvuldigen zonder dat het zijn eigenschappen verliest, het is dan nog steeds een congruent getal.\\
 
 	We hebben nu dus gezien dat we alleen nog maar hoeven te kijken naar kwaadraatvrije getallen. We nemen vanaf nu dus aan dat $n$ een kwaadraatvrij congruent getal is. Dat betekent dat we al een stuk sneller door $\NN$ kunnen gaan om te kijken welke getallen congruent zijn. Sterker nog: er betstaat een algoritme die voor elke $m'\in\NN$ checkt of er een Pythagore\"isch drietal bestaat zodat $m'$ de oppervlakte is van deze driehoek. Als $m'$ congruent is, zet het algoritme deze in een lijst. Helaas weten we niet of een getal dat niet in de lijst staat, ook daadwerkelijk geen congruent getal is. Het kan namelijk ook zo zijn dat het algoritme te lang moest zoeken naar een Pythagore\"isch drietal, waardoor hij het zoeken heeft afgebroken. Dit is dus nog steeds geen optimale manier om naar congruente getallen te zoeken. We zoeken dus eigenlijk nog steeds naar een formule die ons kan vertellen of een getal wel of niet congruent is. Daarvoor introduceren we eerst de stelling van Tunnell:
 	\begin{theorem}\label{def:tunnell}
@@ -272,36 +272,93 @@
 		\end{align}
 		Als het zwakke vermoeden van Birch-Swinnerton-Dyer waar is voor de elliptische krommen $E_n:y^2=x^3-n^2x$, dan, omgekeerd, impliceren deze gelijkheden dat $n$ een congruent getal is.
 	\end{theorem}
-	Deze stelling zegt dat als $n$ een kwadraatvrij en congruent getal is, dan voldoet deze $n$ aan de vergelijkingen (\ref{vgl:oneven}) en (\ref{vgl:even}). Om te checken of een kwadraatvrij getal $m'\in\NN$ congruent is, willen we weten dat de stelling ook de andere kant op werkt. Dit kunnen we alleen aannemen als we het vermoeden van Birch-Swinnerton-Dyer aannemen, een vermoeden over elliptische krommen. Dit is voor nu te ingewikkeld, dus dit zullen we niet verder behandelen. Wat we nu in elk geval hebben is een formule om te kijken of een kwadraatvrij getal $m'\in\NN$ congruent is of niet en dat is waar we naar zochten.
+	\noindent Deze stelling zegt dat als $n$ een kwadraatvrij en congruent getal is, dan voldoet deze $n$ aan de vergelijkingen (\ref{vgl:oneven}) en (\ref{vgl:even}). Om te checken of een kwadraatvrij getal $m'\in\NN$ congruent is, willen we weten dat de stelling ook de andere kant op werkt. Dit kunnen we alleen aannemen als we het vermoeden van Birch-Swinnerton-Dyer aannemen, een vermoeden over elliptische krommen. Dit is voor nu te ingewikkeld, dus dit zullen we niet verder behandelen. Wat we nu in elk geval hebben is een formule om te kijken of een kwadraatvrij getal $m'\in\NN$ congruent is of niet en dat is waar we naar zochten.
 	
 	
 	\section{Presentaties van congruente getallen}
-	We weten al dat ieder congruent getal afhangt van een Pythagore\"isch drietal, welke de presentatie wordt genoemd. Maar is dat een uniek drietal? En zo niet, hoeveel presentaties zijn er dan? Dat zijn de vragen waar we nu naar gaan kijken.\\
+	Zoals we in hoofdstuk \ref{sec:def} al gezien hebben, bestaan er verschillende definities voor een congruent getal. Wij gebruiken hier de meetkundige definitie, waarbij een congruent getal afhangt van een Pythagore\"isch drietal. We zullen hieronder eerst uitleggen wat een presentatie is, daarna zullen we een voorbeeld geven van een presentatie.
 	
-	Belangrijk is dat we eerst op \'e\'en lijn zitten, aangaande wat precies een Pythagore\"isch drietal is. Hier is een Pythagore\"isch drietal van de vorm $(x,y,z)$, waarbij $x,y,z\in \QQ_{>0}$ en $x^2 + y^2 = z^2$. Het bijbehorende congruente getal noemen we $N$, waarbij uiteraard geldt dat $N\in \QQ_{>0}$ (immers, $N = xy / 2$).\\
+	\subsection{Wat is een presentatie}\label{sec:presentaties}
+	Het Pythagore\"ische drietal dat bij een congruent getal hoort, heet de presentatie van het congruente getal. Zo is $(3,4,5)$ de presentatie van het congruente getal $6$. Oftewel,  de presentatie van een congruent getal $n$ is een drietal $(x,y,z)\in\QQ^3_{>0}$, zodat dit, met de meetkundige definitie, $n$ geeft.\\
 	
-	Het is dus ook niet moeilijk te zien dat een congruent getal meerdere presentaties kan hebben. Neem bijvoorbeeld het getal 210, een presentatie daarvan is $(20,21,29)$, immers $(20\cdot 21)/2 = 210$. Een andere presentatie is $(12,35,37)$. En hoewel dit slechts \'e\'en getal is, is het desalniettemin zeer aannemelijk dat ieder congruent getal meerdere presentaties heeft. Sterker nog, ieder congruent getal heeft oneindig veel presentaties.\\
+	Het is belangrijk om hier op te merken dat een congruent getal meerdere presentaties heeft. Zo zijn $(21,20,29)$ en $(35,12,37)$ allebei presentaties van het congruente getal $210$ \cite{Oort}[p.9]. Sterker nog, ieder congruent getal heeft oneindig veel presentaties. We zullen dat hieronder bewijzen.\\
 	
-	Met de huidige definitie van ``presentatie'' is dat moeilijk na te gaan. Om het allemaal wat makkelijker te maken, gebruiken we een nieuwe definitie, gebaseerd op {\color{red}de stelling van Euclides}. We kiezen het positieve gehele getal $D$ dan zo dat $N=m\cdot n \cdot (m-n)^2/D^2$ een primitief congruent getal is. Hierbij zijn $m$ en $n$ zoals in de stelling van Euclides. (Ter herinnering: $m>n$, $ggd(m,n) = 1$ en $m+n$ is oneven.) Daarnaast geldt dat $x = m^2 - n^2$, $y = 2mn$ en $z = m^2 + n^2$.) In dit geval is de presentatie van het congruente getal dan $((m,n),D,N)$. Immers $D^2N = m\cdot n \cdot (m-n)^2$ en $xy/2 = D^2N$.\\
+	Om te beginnen, breiden we eerst de definitie van presentatie uit. Het Pythagore\"ische drietal is \'e\'en versie van een presentatie. En hoewel deze heel praktisch is om congruente getallen te vinden, is deze niet handig voor ons bewijs. We gebruiken dus een andere soort presentatie, gebaseerd op de stelling van Euclides. Deze is van de vorm $((k,l),D,n)$; wat dit precies inhoudt, zal straks duidelijk worden. Concreter gezegd: een presentatie is dat wat "bewijst" dat een getal congruent is.\\
 	
-	Om nu te bewijzen dat ieder congruent getal oneindig veel presentaties heeft, moeten we eerst wat rekenwerk doen. We defini\"eren eerst:
-	\begin{equation}
-		U:= z^2=(m^2+n^2)^2, \qquad V:= 2xy=2(m^2-n^2)2mn
-	\end{equation}
-	Dit zijn de bouwstenen waar we straks een nieuwe presentatie mee gaan vormen voor ons congruente getal. Dat doen we als volgt:
-	\begin{align}
-			U\cdot V \cdot (U-V) \cdot (U+V)=\\
-			z^2\cdot 2xy\cdot (y^2+y^2-2xy)\cdot (x^2+y^2+2xy)=\\
-			2xy\cdot z^2\cdot (x-y)^2\cdot (x+y)^2=\\
-			\{2\cdot z\cdot D\cdot (x-y)\cdot (x+y)\}^2\cdot N
-	\end{align}
-	We hebben zo een nieuwe presentatie gevonden van $N$, waarbij een nieuw Pythagore\"isch drietal hoort (voor het gemak $(a,b,c)$ genoemd). Hierbij geldt:
-	\begin{equation}
-		U'=c^2, \qquad V'=2ab, \qquad E= \mid \{2\cdot z\cdot D\cdot (x-y)\cdot (x+y)\} \mid
-	\end{equation}
-	Wat opvalt is dat $E>D$.\\
+	Om deze nieuwe presentatie te begrijpen, hebben we de volgende stelling nodig:
+	\begin{theorem}\label{def:euclides}
+		\cite{Oort}[p.8] (Euclides) Als $(x,y,z)$ een primitief Pythagore\"isch drietal is met $x$ oneven, dan zijn er getallen $k,l\in\ZZ_{>0}$ met $k>l$, en $ggd(k,l)=1$ en $k+l$ oneven zodat
+		\begin{equation*}
+			x=k^2-l^2,\qquad y=2kl,\qquad z=k^2+l^2.
+		\end{equation*}
+	\end{theorem}
+	\noindent Deze stelling verklaart alvast de $k$ en $l$ in onze nieuwe presentatie $((k,l),D,n)$.\\
 	
-	We kunnen deze methode herhalen met $U'$, $V'$ en $E$, en zo weer een nieuwe presentatie vinden. Met die nieuwe presentatie kunnen we weer een nieuwe presentatie vinden, enzovoort. In feite kunnen we het dus oneindig vaak herhalen, waarbij we steeds een nieuwe presentatie vinden. Ergo: ieder congruent getal bevat oneindig veel presentaties.
+	De $D$ en $n$ zijn allebei positieve gehele getallen, afhankelijk van $k$ en $l$. Dat zit zo: $n=kl\cdot \frac{k^2-l^2}{D^2}$, waarbij $n$ een kwadraatvrij congruent getal is en $D$ is het getal dat ervoor zorgt dat $n$ inderdaad kwadraatvrij is.\footnote{Indien een $kl\cdot(k^2-l^2)$ al kwadraatvrij is, is de waarde van $D$ uiteraard gelijk aan 1.} Dus $((k,l),D,n)$ is een presentatie van $n$.\\
+	
+	Nu we weten wat de presentatie $((k,l),D,n)$ inhoudt, kunnen we beginnen met het bewijzen van de volgende stelling.	
+	\begin{theorem}
+		Elk congruent getal heeft oneindig veel presentaties.
+	\end{theorem}
+	
+	\begin{proof}
+		We defini\"eren eerst:
+		\begin{equation*}
+			U:=z^2=(k^2+l^2)^2, \qquad V:=2xy=2\cdot(k^2-l^2)\cdot 2kl
+		\end{equation*}
+		Met $U$ en $V$ kunnen we een andere presentatie vinden voor ons congruente getal. Dat doen we als volgt:
+		\begin{align*}
+			UV (U - V) (U + V) &= z^2 \cdot 2xy (z^2 - 2xy) (z^2 + 2xy)\\
+			&= z^2 \cdot 2xy (x^2 + y^2 - 2xy) (x^2 + y^2 + 2xy)\\
+			&= 2xy \cdot z^2 (x - y)^2 (x + y)^2\\
+			&= 2 (k^2-l^2) \cdot 2kl (k^2+l^2)^2 (x - y)^2 (x + y)^2\\
+			&= (2 (k^2+l^2) (x-y) (x+y))^2 \cdot kl (k^2-l^2)\\
+			&= (2 z (x - y) (x + y))^2 \cdot d^2n\\
+			&= (2 z D (x - y) (x + y))^2 \cdot n
+		\end{align*}
+		
+		We hebben zo dus een nieuwe presentatie gevonden voor $n$, namelijk: $((p,q),E,n)$, met bijbehorend Pythagor\"isch drietal $(a,b,c)$. Zowel $p$ en $q$ als $(a,b,c)$ voldoen uiteraard aan de eisen die gesteld zijn in de stelling van Euclides.\\
+		
+		Dat de gevonden presentatie niet gelijk is aan de originele, is te zien aan de constante $E$. Er geldt namelijk:
+		\begin{align*}
+			E &= | 2 z D (x-y) (x+y) | \\
+			&= 2 D \cdot | z (x-y) (x+y) | \\
+			&\geq 2 D \\
+			&> D.
+		\end{align*}
+		Dus $E > D$.\\
+		
+		We kunnen dezelfde berekeningen doen met $U'$ en $V'$. We krijgen dan weer een andere presentatie. Belangrijker nog, we krijgen de nieuwe constante $F$ waarvoor geldt: $F=|2 c E (a-b) (a+b)|.$ Uiteraard geldt dan dat $F > E$.\\
+		
+		We kunnen de procedure dus oneindig vaak herhalen, steeds met een andere presentatie als uitkomst. Dat betekent dus dat voor ons congruente getal $n$ (en dus ieder congruent getal $n$) oneindig veel presentaties bestaan.
+	\end{proof}
+	
+	\subsection{Een voorbeeld van een presentatie}
+	We hebben in hoofdstuk \ref{sec:presentaties} een bewijs geleverd dat er oneindig veel presentaties bestaan, maar we hebben nog niet gezien hoe deze methode in de praktijk werkt. Dat gaan we hier doen, voor het congruente getal 210.\\
+	
+	Als eerste willen we uiteraard controleren of 210 inderdaad een congruent en kwadraatvrij getal is. Dat het congruent is, weten we al. Immers, eerder zijn al twee presentaties gegeven, namelijk $(21,20,29)$ en $(35,12,37)$. Dat 210 ook kwadraatvrij is, is na te gaan door het getal op te splitsen in priemfactoren. Voor 210 geldt: $210 = 2 \cdot 3 \cdot 5 \cdot 7$. Geen enkel getal komt dubbel voor, dus is 210 ook kwadraatvrij.\\
+	
+	We kennen al twee presentaties voor 210. We kiezen ervoor om $(21,20,29)$ te gebruiken.\\
+	
+	Allereerst willen we een presentatie van de vorm $((k,l),D,n)$ vinden. De constante $n=210$ weten we al, dus resteren $k$, $l$ en $D$. We kunnen $k$ en $l$ berekenen door de formules $x = k^2 - l^2$, $y = 2kl$ en $z = k^2 + l^2$. De laatste constante, $D$, berekenen we met de formule $n = kl \cdot \frac{k^2-l^2}{D^2}$.\\
+	
+	\noindent We rekenen eerst $k$ uit:
+	\begin{equation*}
+		k^2 = \frac{1}{2}((k^2-l^2)+(k^2+l^2)) = \frac{1}{2} (x+z) = \frac{1}{2} (21+29) = 25.
+	\end{equation*}
+	Dus $k = \sqrt{25} = 5$. Vervolgens kunnen we ook $l$ uitrekenen:
+	\begin{equation*}
+		l = \frac{y}{2k} = \frac{20}{2 \cdot 5} = 2.
+	\end{equation*}
+	Nu resteert alleen $D$ nog:
+	\begin{align*}
+		n &= kl \cdot \frac{k^2-l^2}{D^2}.
+		\intertext{Als we dit invullen, krijgen we:}
+		210 &= 5 \cdot 2 \cdot \frac{5^2-2^2}{D^2} = \frac{210}{D^2}.
+	\end{align*}
+	Dus $D = \sqrt{1} = 1$. De gezochte presentatie is dus $((5,2),1,210)$. Hiermee kunnen we weer een nieuwe presentatie vinden. We gebruiken daarvoor een formule uit het bewijs: $E = |2 z D  (x - y) (x+y)|$. In dit geval geldt dan dat $E = |2 \cdot 29 \cdot 1 \cdot (21-20) (21+20)| = 2378$. Dit is duidelijk een presentatie die heel veel groter is dan de originele.\footnote{Het berekenen van de precieze presentatie is zeer gecompliceerd, dus dat zullen we niet doen.}\\
+	
+	Dezelfde stappen kunnen we uitvoeren voor andere kwadraatvrije congruente getallen. De andere presentatie van 210, $(35,12,37)$, blijkt dan $((6,1),1,210)$ te zijn en geeft $E = 79994$. De eerdergegeven presentatie van 6, $(3,4,5)$, levert dan $((2,1),1,6)$ en $E = 70$ op.
 	
 	
 	\section{Samenvatting}
