sync en ingeleverd

--- a/Werkstuk versie 2.tex
+++ b/Werkstuk versie 2.tex
@@ -133,11 +133,42 @@
 	\end{align}
 	Fermat vermoedde dat voor $n \geq 3$ er alleen triviale oplossingen bestaan voor (1). Dat wil zeggen, $\forall (x,y,z) \in \ZZ^3$ en $x^n + y^n = z^n$ met $n \geq 3$, geldt $x \cdot y \cdot z = 0$. \\
 	Wij zijn echter vooral ge\"interesseerd in het geval waarbij $n=2$ en alle niet triviale oplossingen van de vergelijking $x^2 + y^2 = z^2$. Deze oplossingen noteren we als $(x,y,z)$ en we noemen deze oplossingen Pythagore\"ische drietallen. Dit komt omdat het vermoeden van Fermat met $n=2$ de stelling van Pythagoras is. De niet-triviale oplossingen $(x,y,z)$ van $x^2 + y^2 = z^2$ vormen dan ook een rechthoekige driehoek waarbij $z$ de schuine zijde is. Een simpel voorbeeld van een Pythagore\"isch drietal is $(3,4,5)$, want $3^2 + 4^2 = 9 + 16 = 25 = 5^2$. \\
-	Een speciaal soort Pythagore\"isch drietal is het zogenaamde primitieve Pythagore\"ische drietal. Dit is een Pythagore\"isch drietal $(x,y,z)$ waarvoor ook geldt dat $ggd(x,y)=1$.
-	{\color{red}Bewijs dat ggd(x,z) en ggd(y,z) ook 1 zijn. Nog veel meer bewijzen over ppd's.}
-	%Tweede definitie congruente getallen
+	Een speciaal soort Pythagore\"isch drietal is het zogenaamde primitieve Pythagore\"ische drietal. Dit is een Pythagore\"isch drietal $(x,y,z)$ waarvoor ook geldt dat de grootste gemeenschappelijke deler van x en y 1 is. We noteren dit als $ggd(x,y) = 1$. Nu kunnen en gaan we het volgende bewijzen:
+	\begin{theorem}
+	Als $(x,y,z)$ een Pythagore\"isch drietal is met $ggd(x,y) = 1$, dan $ggd(x,z) = 1$
+	\end{theorem}
+	\begin{proof}
+	Stel, $ggd(x,y) = g$, dan geldt
+	\begin{align*}
+	x = a \cdot g \text{ met } a \in \NN \\
+	y = b \cdot g \text{ met } b \in \NN
+	\end{align*}
+	Deze notaties voor $x$ en $y$ kunnen we substitueren in de stelling van Pythagoras:
+	\begin{align*}
+	z^2=(a\cdot g)^2+(b\cdot g)^2\\
+	z^2 = g^2\cdot (a^2 + b^2)\\
+	z = g\cdot \sqrt{a^2 + b^2}
+	\end{align*}
+	Nu weten we dat $g$ in ieder geval een deler van $z$ is. Verder weten we dat $x$ wel $a$ als deler heeft, maar niet $b$. Als dat wel zo was, was $ggd(x,y) = g*b$. Daarom is $g$ de grootste gemene deler van $x$ en $z$. Ditzelfde kan worden gedaan zonder verlies van algemeenheid voor $y$ en $z$.
+	\end{proof}	
+	Verder hebben primitieve Pythagore\"ische drietallen nog veel meer eigenschappen, die elk bewezen kunnen worden. Wij zullen nog een aantal van deze eigenschappen behandelen, te beginnen met welke getallen even, en welke getallen oneven zijn. Van $x$ en $y$ is er altijd \'e\'en getal even. Daardoor is $z$ altijd oneven.
+	\begin{proof}
+	Voor $x$ en $y$ zijn er 3 mogelijkheden: allebei even, allebei even of 1 van de 2 is even. De eerste mogelijkheid kunnen we snel afschrijven. Als $x$ en $y$ allebei even zouden zijn, dan is $ggd(x,y) \neq 1$ want 2 is sowieso een deler. Om te bewijzen dat $x$ en $y$ niet allebei oneven kunnen zijn, nemen we eerst aan dat dat wel zo is:
+	\begin{align*}
+	x = 2k + 1\\
+	y = 2n + 1\\
+	\end{align*}
+	Uitwerken hiervan geeft dat $z^2$ een even getal is, en daarom $z$ ook (de som van 2 oneven getallen is weer even). We schrijven $z = 2m$
+	\begin{align*}
+	x^2 + y^2 = z^2\\
+	(2k + 1)^2 + (2n + 1)^2 = (2m)^2\\
+	4k^2 + 4k + 1 +4n^2 + 4n + 1 = 4m^2\\
+	4(k^2 + k + n^2 + n) + 2 = 4m^2
+	\end{align*}
+	Als we beide kanten door 4 zouden delen, krijgen we een rest van 2 aan de linkerkant en een rest van 0 aan de rechterkant. Dit kan natuurlijk niet, dus $x$ en $y$ zijn niet allebei even.
+	\end{proof}
+	\cite{Posamentier}[p.156]Een derde eigenschap van een Pythagore\"isch drietal is dat $\frac{(z-x)(z-y)}{2}$ een kwadraat is. 
 	
-	%Dat ding uit het boek, zie whatsapp
 	\begin{proposition}
 		\cite{Koblitz}[p.4, vertaald] Laat $n$ een vast kwaadraatvrij positief getal zijn. Laat $x,y,z,\delta \in\QQ$ met $x<y<z$. Er is een \'e\'en op \'e\'en relatie tussen rechthoekige driehoeken met zijden $x$ en $y$, schuine zijde $z$ en oppervlakte $n$, en getallen $\delta$ waarvoor geldt dat $\delta$, $\delta +n$ en $\delta -n$ de kwadraten zijn van een rationeel nummer. De correspondentie is:
 		\begin{align}
@@ -146,7 +177,18 @@
 		\end{align}
 		In het bijzonder, $n$ is een congruent getal dan en slechts dan als er bestaat een $\delta$ zodat $\delta$, $\delta+n$ en $\delta-n$ kwadraten van rationele nummers zijn.
 	\end{proposition}
-	
+	\begin{proof}
+	We beginnen door een drietal $(x,y,z)$ te nemen met de gewenste eigenschappen, dus
+	\begin{align*}
+	x^2 + y^2 = z^2 \text{ en } \frac{1}{2}xy=n
+	\end{align*}
+	Als we 4 keer de tweede vergelijking van de eerste afhalen of erbij optellen houden we het volgende over:
+	\begin{align*}
+	x^2 \pm 2xy + y^2 = z^2 \pm 4n\\
+	(x \pm y)^2 = z^2 \pm 4n\\
+	\end{align*}
+	Door nu beide kanten door 4 te delen kunnen we eenvoudig zien dat $\delta = \frac{z}{2}^2$ de eigenschap heeft dat $\delta \pm n$ gehele kwadraten zijn
+	\end{proof}
 	
 	%\endsection{Daan}
 
