--- a/bib.bib
+++ b/bib.bib
@@ -1,1 +1,1 @@
-@BOOK{Koblitz,AUTHOR={Neal Koblitz},TITLE={{I}ntroduction to {E}lliptic {C}urves and {M}odular {F}orms},YEAR={1984},PUBLISHER={Springer-Verlag New York Inc.},},@MISC{Oort,AUTHOR={Frans Oort},TITLE={{C}ongruente getallen},YEAR={2009},MONTH={februari},NOTE={Urecht. Verkregen op 24-11-2015 van \url{http://www.staff.science.uu.nl/~oort0109/Kaleid-II-09-kortetekst.pdf}},},@MISC{Beukers,AUTHOR={F. Beukers},TITLE={{E}lementaire {G}etaltheorie},YEAR={2015},NOTE={Utrecht. Verkregen op 08-12-2015 van \url{http://www.staff.science.uu.nl/~beuke106/getaltheorie/}},},@ARTICLE{Coates,AUTHOR={John H. Coates},TITLE={{C}ongruent {N}umber {P}roblem},YEAR={2005},JOURNAL={Pure and Applied Mathematics Quarterly},VOLUME={1},NUMBER={1},NOTE={Verkregen op 27-12-2015 van \url{http://intlpress.com/site/pub/files/_fulltext/journals/pamq/2005/0001/0001/PAMQ-2005-0001-0001-a002.pdf}},PAGES={14-27},},
+@BOOK{Koblitz,AUTHOR={Neal Koblitz},TITLE={{I}ntroduction to {E}lliptic {C}urves and {M}odular {F}orms},YEAR={1984},PUBLISHER={Springer-Verlag New York Inc.},},@MISC{Oort,AUTHOR={Frans Oort},TITLE={{C}ongruente getallen},YEAR={2009},MONTH={februari},NOTE={Urecht. Verkregen op 24-11-2015 van \url{http://www.staff.science.uu.nl/~oort0109/Kaleid-II-09-kortetekst.pdf}},},@MISC{Beukers,AUTHOR={F. Beukers},TITLE={{E}lementaire {G}etaltheorie},YEAR={2015},NOTE={Utrecht. Verkregen op 08-12-2015 van \url{http://www.staff.science.uu.nl/~beuke106/getaltheorie/}},},@ARTICLE{Coates,AUTHOR={John H. Coates},TITLE={{C}ongruent {N}umber {P}roblem},YEAR={2005},JOURNAL={Pure and Applied Mathematics Quarterly},VOLUME={1},NUMBER={1},NOTE={Verkregen op 27-12-2015 van \url{http://intlpress.com/site/pub/files/_fulltext/journals/pamq/2005/0001/0001/PAMQ-2005-0001-0001-a002.pdf}},PAGES={14-27},},@BOOK{Posamentier,AUTHOR={Alfred S. Posamentier},TITLE={{T}he {P}ythagorean {T}heorem: {T}he {S}tory of {I}ts {P}ower and {B}eauty},YEAR={2010},PUBLISHER={Prometheus Books},},
