--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -8,8 +8,7 @@
 \usepackage{tikz}
 \usepackage{url}
 
-\title{\textbf{Congruente getallen}\\
-		\small{eerste versie begeleider}}
+\title{\textbf{Congruente getallen}}
 \author{
 	\begin{tabular}{ l l }
 		Lotte Bruijnen, & 4297652 \\
